# c-tutorial

./: .gitignore  CMakeLists.txt  main.cpp
alocacao-dinamica/: demo_malloc.cpp  realloc.cpp
arquivos/: escrita.cpp  leitura.cpp
controle-de-fluxo/: condicionais.cpp  goto.cpp  loops.cpp
estruturas/: enum.cpp  structs.cpp  unions.cpp
funcoes/: definicao.cpp  ponteiros_funcoes.cpp  recursividade.cpp
fundamentos/: constantes.cpp  operadores.cpp  variaveis.cpp
ponteiros/: aritmetica.cpp  basico.cpp  ponteiro_ponteiro.cpp
